--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Form.Registration"></activity>
+        <activity android:name=".Form.SimpleForm"></activity>
+        <activity android:name=".Form.Selector" />
+        <activity android:name=".Form.Registration" />
         <activity android:name=".Sliders.SliderActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
